--- a/wiki/LICENSE.wiki
+++ b/wiki/LICENSE.wiki
@@ -1,4 +1,4 @@
-#labels licence
+#labels license
 MRG is licensed under the Apache License, Version 2.0.
 
 Copyright 2010 Paul Gearon
@@ -27,3 +27,10 @@ Redistribution and use in source and binary forms, with or without modification,
   # The name of the author may not be used to endorse or promote products derived from this software without specific prior written permission.
 
 THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+----
+For convenience, binary versions of the libraries that Jena uses are also available locally:
+
+  * [http://jena.sourceforge.net/iri/index.html IRI] 0.8  [http://jena.sourceforge.net/iri/license.html License]
+  * [http://site.icu-project.org/download ICU4J] 3.4.4  [http://source.icu-project.org/ License]
+  * [http://xerces.apache.org/ Xerces-J] 2.7.1  [http://www.apache.org/licenses/LICENSE-2.0.html License]
