--- a/wiki/LICENSE.wiki
+++ b/wiki/LICENSE.wiki
@@ -16,7 +16,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 
 ----
-MRG includes code from [http://jena.sourceforge.net/ Jena].
+MRG includes code from [http://jena.sourceforge.net/ Jena], which we gratefully acknowledge.
 
 © Copyright 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Hewlett-Packard Development Company, LP
 
