--- a/wiki/Download.wiki
+++ b/wiki/Download.wiki
@@ -6,3 +6,6 @@ If downloading the binary JAR file, then you will also need to get the following
   * [http://jena.sourceforge.net/iri/index.html IRI] - ([http://jena.sourceforge.net/iri/license.html Jena License])
   * [http://site.icu-project.org/download ICU4j] - ([http://source.icu-project.org/repos/icu/icu/trunk/license.html ICU Licence])
   * [http://xerces.apache.org/mirrors.cgi#binary Xerces2 Java] - ([http://www.apache.org/licenses/LICENSE-2.0.html Apache 2.0 License])
+
+----
+If downloading as source code, then a `pom.xml` file is provided for building with [http://maven.apache.org/ Maven]. This will automatically download all dependencies.
