--- a/wiki/Download.wiki
+++ b/wiki/Download.wiki
@@ -3,11 +3,14 @@ MRG can be downloaded directly from the [http://code.google.com/p/mrg/downloads/
 
 If downloading the binary JAR file, then you will also need to get the following JARs:
 
+  * [http://sourceforge.net/projects/joda-time/files/joda-time/ Joda Time] - ([http://joda-time.sourceforge.net/license.html Apache 2.0 License])
   * [http://jena.sourceforge.net/iri/index.html IRI] - ([http://jena.sourceforge.net/iri/license.html Jena License])
   * [http://site.icu-project.org/download ICU4j] - ([http://source.icu-project.org/repos/icu/icu/trunk/license.html ICU Licence])
   * [http://xerces.apache.org/mirrors.cgi#binary Xerces2 Java] - ([http://www.apache.org/licenses/LICENSE-2.0.html Apache 2.0 License])
 
-These files are only required if you are parsing RDF/XML or N3 files, and can be skipped otherwise. Ultimately, I'd like to get rid of these dependencies.
+All except the Joda-time files are only required if you are parsing RDF/XML or N3 files, and can be skipped otherwise. Ultimately, I'd like to get rid of these dependencies.
+
+Joda-time is required for dealing with xsd:dateTime literals.
 
 ----
 If downloading as source code, then a `pom.xml` file is provided for building with [http://maven.apache.org/ Maven]. This will automatically download all dependencies.
